# web-transport-addin

./: .env  .gitignore  AGENT.md  Cargo.toml  Makefile.toml  Manifest.xml  README.md
.codex/: config.toml
.github/workflows/: build-zip.yml
demo/: Demo.epf  Demo.xml
demo/Demo/Forms/: Форма.xml
demo/Demo/Forms/Форма/Ext/: Form.xml
demo/Demo/Forms/Форма/Ext/Form/: Module.bsl
demo/Demo/Templates/: Компонента.xml
docs/: architecture.md  http.md  mcp.md  ws.md
docs/architecture/arc42/: architecture.md
docs/decisions/: 0001-use-sse-transport-for-async-mcp-calls.md  0002-drop-internal-task-emulation-in-mcp-bridge.md  0003-add-macos-x86-64-release-artifact.md  README.md
docs/plans/: adr-0001-implementation-plan.md
scripts/: build-epf.sh  build-release.sh  dev-build.sh  run_demo.sh
src/: addin_error.rs  lib.rs  ws_client.rs
src/http/: addin.rs  mcp_handler.rs  mod.rs  server.rs
src/mcp/: addin.rs  mod.rs  registry.rs  resource_template.rs  server.rs
src/ws/: addin.rs  mod.rs
