[package]
name = "webtransport"
version = "0.2.0"
edition = "2021"
authors = ["alkoleft"]

[dependencies]
utf16_lit = "2.0"
addin1c = "0.7"
tokio = { version = "1.43", features = ["rt-multi-thread", "time"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
bytes = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1
