[package]
name = "webtransport"
version = "0.3.0"
edition = "2021"
authors = ["alkoleft"]

[dependencies]
utf16_lit = "2.0"
addin1c = "0.7"
tokio = { version = "1.43", features = ["rt-multi-thread", "time"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.17", features = ["draft202012"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
axum = "0.7"
tower = "0.5"
http-body-util = "0.1"
tokio-util = "0.7"
rmcp = { version = "1.1.0", default-features = false, features = ["server", "transport-streamable-http-server"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1
