[package]
name = "webtransport"
version = "0.4.0"
edition = "2021"
authors = ["alkoleft"]

[dependencies]
utf16_lit = "2.0.2"
addin1c = "0.7"
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "net", "sync", "time", "io-util"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonschema = { version = "0.44.1", default-features = false }
bytes = "1.11.1"
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1"] }
tower = "0.5.3"
http-body-util = "0.1.3"
tokio-util = { version = "0.7.18", default-features = false }
rmcp = { version = "1.1.0", default-features = false, features = ["server", "transport-streamable-http-server"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1
